Thu Feb 15 20:26:30 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/ftp.rb: Revert the previous change pending discussion.

Thu Feb 15 18:08:17 2007  Akinori MUSHA  <knu@iDaemons.org>

	* dir.c (glob_helper): Fix the function declaration.

Thu Feb 15 17:13:32 2007  Akinori MUSHA  <knu@iDaemons.org>

	* version.h: Welcome to the post-1.8.6 world.  Radical changes are
	  inhibited in the ruby_1_8 branch until the 1.8.6 final release
	  goes out of the door.

Thu Feb 15 16:44:14 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/generic.rb (URI::Generic::userinfo): Considering how
	  `scheme://user:@...', `scheme://:password@...' and
	  `scheme://:@...' are parsed, an empty user name or password
	  should be allowed and represented as it is.

Thu Feb 15 11:46:05 2007  KIMURA Koichi  <hogemuta@gmail.com>

	* dir.c, win32/win32.c, win32/dir.h, ruby.h, intern.h: Bring
	  encoding aware globbing support in from trunk.  Dir.[] and
	  Dir.glob() can now take many patterns in an array.  Minor fixes
	  will follow.

Thu Feb 15 11:00:26 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/generic.rb (URI::Generic::userinfo): should support
	  empty password.  [ruby-core:10290]

	* lib/uri/generic.rb (URI::Generic::set_password): password can be
	  cleared by nil.  [ruby-core:10290]

	* lib/uri/common.rb (escape): regard second string argument as a
	  character set properly. [ruby-dev:27692]

	* lib/uri/ftp.rb: Attempt to conform to RFC 1738 with regard to
	  relative/absolute paths.

	* lib/uri: Lovely RDOC patches from mathew (metaATpoboxDOTcom).

Thu Feb 15 10:57:38 2007  Tietew  <tietew@tietew.net>>

	* lib/cgi.rb (CGI::unescapeHTML): invalid decoding for single
	  unescaped ampersand.  a patch from Tietew
	  <tietew+ruby-dev at tietew.net> in [ruby-dev:30292].
	  fixed: [ruby-dev:30289]

Thu Feb 15 10:48:40 2007  MenTaLguY  <mental@rydia.net>

	* ext/thread/thread.c: Handle interrupted waits correctly.
	  [ruby-bugs:PR#8663]
