@@ -8,6 +8,7 @@
 
 English.rb
 Env.rb
+README
 abbrev.rb
 base64.rb
 benchmark.rb
@@ -23,6 +24,7 @@ debug.rb
 delegate.rb
 drb
 drb.rb
+e2mmap.rb
 erb.rb
 eregex.rb
 fileutils.rb
@@ -36,6 +38,7 @@ getopts.rb
 gserver.rb
 importenv.rb
 ipaddr.rb
+irb
 irb.rb
 jcode.rb
 logger.rb
